<resources>
    <string name="app_name">Warrior</string>
    <string name="warrior_pro">Warrior PRO</string>
    <string name="caption">Buat diri Anda Sebagai Ambasador dan sebarkan hal baik untuk membangun Brand lebih baik</string>
    <string name="WELCOME">Selamat Datang di</string>
    <string name="warrior">Warrior</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="daftarkan">Daftarkan diri dan akun anda untuk menjadi warrior</string>
    <string name="register2">REGISTER</string>
    <string name="no_handphone">NO HANDPHONE</string>
    <string name="nama_lengkap">NAMA LENGKAP</string>
    <string name="lanjutkan">Lanjutkan</string>
</resources>