<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_logo_splash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warrior"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:layout_below="@id/linear1"
        android:src="@drawable/img_welcome_page"
        android:layout_above="@id/linear2"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WELCOME"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="26sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warrior_pro"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="26sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/caption"
            android:letterSpacing="0.002"
            android:layout_marginBottom="16dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:background="@drawable/login_button"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:textColor="@color/red"
            android:backgroundTint="@color/white"/>

    </LinearLayout>



</RelativeLayout>